# 100-DAYS-OF-CODE-IN-PYTHON

./: Readme.md
01 Day/: exercise_1_printing.py  exercise_2_debugging.py  exercise_3_input_function.py  exercise_4_variables.py
02 Day/: day-2-1-exercise.py  day-2-2-exercise.py  day-2-3-exercise.py  tip-calculator-start.py
03 Day/: day-3-1exercise.py  day-3-2-exercise.py  day-3-4-exercise.py  day-3-5-exercise.py  day3-3exercise.py  treasure-island-start.py
04 Day/: day-4-1-exercise.py  day-4-2-exercise.py  day-4-3-exercise.py  day-4-list-practice.py  rock-paper-scissors-start.py
05 Day/: day-5-1-exercise.py  day-5-2-exercise.py  day-5-3-exercise.py  day-5-4-exercise.py  day-5-end.py  day-5-for-loops-end.py  password-generator-start.py
07 Day/: Day-7-Hangman-1-Start.py  Day-7-Hangman-2-Start.py  Day-7-Hangman-3-Start.py  Day-7-Hangman-4-End.py  Day-7-Hangman-4-Start.py  Day-7-Hangman-5-End.py  Day-7-Hangman-5-Start.py  Day-7-Hangman-Final.py
08 Day/: caesar-cipher-1-start.py  caesar-cipher-2-start.py  caesar-cipher-3-start.py  caesar-cipher-4-start.py  day-8-1-exercise.py  day-8-2-exercise.py  day-8-start.py
09 Day/: blind-auction-completed.py  blind-auction-start.py  day-9-1-exercise.py  day-9-2-exercise.py  day-9-end.py  day-9-start-1.py  day-9-start.py
10 Day/: calculator-debug-solution.py  calculator-final.py  calculator-start.py  day-10-1-exercise.py  day-10-end.py  day-10-start.py
11 Day/: blackjack-final.py  blackjack-start .py
67 Day/: pyproject.toml
67 Day/.upm/: store.json
67 Day/templates/: footer.html  header.html  index.html
(+190 files in other folders)
